--- a/tex/main.tex
+++ b/tex/main.tex
@@ -211,6 +211,7 @@ The equations and the boundary conditions are given in Table \ref{tbl:eqns-bc-pa
 \end{table}
 
 \subsection{Drivers For Indoor Air Contaminant Variability}
+\subsubsection{The Role Of Building Depressurization/Pressurization}
 % KDE figures
 \begin{figure}[htb!]
   \caption{KDE analysis of IACC dependence on indoor/outdoor pressure difference at the ASU house and North Island site (\ref{fig:kde-asu-nas}) and the Indianapolis site (\ref{fig:kde-indianapolis}). p-values and Pearson's r-values shown for each dataset.}
@@ -231,11 +232,11 @@ The equations and the boundary conditions are given in Table \ref{tbl:eqns-bc-pa
   \end{subfigure}
 \end{figure}
 % Introduction
-Out of the factors that influence the IACC in VI, pressure is one of the most dynamic ones, and the relationship between changes in indoor/outdoor pressure difference and IACC are examined in Figure \ref{fig:kde-analysis}.
-Three well studied VI sites are considered, the "ASU house" near Hill AFB in Utah, a building at North Island NAS in California and a duplex in Indianapolis.\par
+Out of the factors that influence IACC in VI, pressure is one of the most dynamic ones, and the relationship between changes in indoor/outdoor pressure difference and IACC are examined in Figure \ref{fig:kde-analysis}.
+Three well-studied VI sites are considered, the "ASU house" near Hill AFB in Utah, a building at North Island NAS in California and a duplex in Indianapolis.\par
 % Univariate IACC description
-The IACC at these sites vary significantly, therefore some means of comparing them all to each other is necessary.
-Additionally, the focus in this paper is the driver for variations in IACC, and reprentation of the variations between the different sites must also be achieved, specifically variations on the scale of order of magnitudes is of the greatest interest, as these are the largest hinderance to proper site IACC characterization.
+The absolute IACC at these sites vary significantly, therefore some means of comparing them all to each other is necessary.
+Additionally, the focus in this section is the driver for variations in IACC, and representation of the variations between the different sites must also be achieved, specifically variations on the scale of order of magnitudes is of the greatest interest, as these are the largest hinderance to proper site IACC characterization.
 To achieve these goals, the log-10 deviation from the mean IACC ($\mu$) within each dataset is calculated, e.g. $10\mu$ indicates the IACC is an order of magnitude above the mean IACC for the dataset.
 On the y-margin in figures \ref{fig:kde-asu-nas} and \ref{fig:kde-indianapolis}, the univariate KDE distribution of deviation from the mean may be seen. \par
 % Univariate pressure description
@@ -245,10 +246,10 @@ A negative pressure difference indicate that the building is underpressurized re
 The relationship between the deviation from mean IACC, and indoor/outdoor pressure difference may be seen in the central portion of each figure, in the form of a bivariate KDE distribution.
 The p-value and Pearson's r-value for each bivariate distribution is shown in the legend.\par
 % Sub-figure description (details about sites)
-In Figure \ref{fig:kde-asu-nas} the North Island and ASU house datasets are plotted, with blue representing the North Island site, with red and green representing the ASU house.
-The ASU house dataset is considered in two different parts, the first (red) is data belonging to the time period before the PP was discovered, the second (green) is after the PP was sealed off.
+In Figure \ref{fig:kde-asu-nas} the North Island and ASU house datasets are plotted, with blue representing the North Island site, and with red and green representing the ASU house.
+The ASU house dataset is split into two different parts, the first (red) is data from the time period before the PP was discovered, the second (green) is from after the PP was sealed off.
 At both of these sites, TCE was the only contaminant considered.
-The IACC of Chloroform and PCE the 422 part of the Indianapolis duplex are considered in Figure \ref{fig:kde-indianapolis}.\par
+The IACC of Chloroform and PCE in the 422 part of the Indianapolis duplex are considered in Figure \ref{fig:kde-indianapolis}.\par
 % North Island discussion
 From Figure \ref{fig:kde-asu-nas}, it is apparent that the three datasets differ significantly from each other.
 The North Island site exhibit the greatest variation in both pressure difference and IACC, in fact, looking at the univariate pressure distribution - it is almost entirely flat and spanning from extremly high and low values.
@@ -283,7 +284,6 @@ E.g. if a single sample is less than an order of magnitude from some target limi
 These data also call the role of advection in VI into question, as "normal" pressure difference ranges are such a poor predictor of IACC variation, which is the opposite of what one would expect if advection was a dominant transport mechanism.\par
 
 \begin{comment}
-\subsubsection{The Role Of Building Depressurization/Pressurization}
 
 % 2D KDE plot of deviation from mean TCE in indoor air and pressure difference from the ASU house and North Island NAS
 \begin{figure}[htb!]
